--- a/Metadata/index.html
+++ b/Metadata/index.html
@@ -2,12 +2,26 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <title>Page Title</title>
-    <meta name="description" content="A brief summary of the webpage's content.">
-    <meta name="keywords" content="relevant keywords related to the webpage's content">
-    <meta name="author" content="Your Name">
-    <meta name="robots" content="index, follow">
+        <meta charset="UTF-8">
+        <title>Page Title | Your Brand/Website Name</title> 
+        <meta name="description" content="A concise and compelling description of the webpage's content. 
+        This should be around 150-160 characters and include relevant keywords."> 
+        <meta name="keywords" content="keyword1, keyword2, keyword3, keyword4, keyword5"> 
+        <meta name="author" content="Your Name/Your Company">
+        <meta name="robots" content="index, follow">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
+        <meta property="og:title" content="Page Title | Your Brand/Website Name"> 
+        <meta property="og:description" content="Concise and compelling description for social media sharing."> 
+        <meta property="og:image" content="URL of your image for social media sharing"> 
+        <meta property="og:url" content="Full URL of the webpage"> 
+        <meta property="og:site_name" content="Your Brand/Website Name"> 
+        <meta property="og:type" content="website" /> 
+        <meta name="twitter:card" content="summary_large_image"> 
+        <meta name="twitter:site" content="@your_twitter_handle"> 
+        <meta name="twitter:creator" content="@your_twitter_handle"> 
+        <meta name="twitter:title" content="Page Title | Your Brand/Website Name"> 
+        <meta name="twitter:description" content="Concise and compelling description for Twitter."> 
+        <meta name="twitter:image" content="URL of your image for Twitter sharing">
     <!-- Move to ReadHere for more -->
 </head>
 
